org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2003-03-16:
	- Fixed Issue 102: "searches should be against the "unversioned" form of the latest ontologies"
 	  See OntGraph.
 	  NOTE: *only* the "unversioned" latest versions are loaded into the graph so all
	  responses will be now in unversioned form.
	  Fix available as of 0.2.0.beta6
	  
	- Sparql: make links for good URLs in html response. The ones that are good MmiUri's are
	  appended ".html" so the HTML output format is transferred for subsequent resolution.
	  This fixes Issue 103: "make links for well formed URLs in HTML query reponse"
 	  

2009-03-15:
	- Fixed issue 101: "Inexistent term is resolved"
	  The "problem" was that model.getResource "behaves identically to createResource(String)"
	  so it *creates* a fresh resource if the resource does NOT exist!
	  See http://jena.sourceforge.net/javadoc/com/hp/hpl/jena/rdf/model/Model.html#getResource(java.lang.String)
	  I was using the call ``termRes = model.getResource(termUri)'', along with a termRes != null check to 
	  determine the existence of the term. The fix is to use an explicit "contains" check.
	  Also removed the try with the "#" separator as we are now only using "/".
	  A 404 is returned now as well.
	  This is fixed in HtmlDispatcher.dispatchTerm() which is currently the only place where
	  term URIs are being resolved.  See issue #100: "term URI always resolved in HTML"
	  
	- Sparql: Unused prefixes (except "") are now removed from the CONSTRUCT output.
	  New JenaUtil2.removeUnusedNsPrefixes(Model model);
	  
	  
	- New version.properties to handle version information for this service. build.xml translates
	  this to the application via the web.xml (which is read by OntConfig). Also, a "build number",
	  which is a timestamp, is used for the full version. 
	  
	  
2009-03-14:
	- The following kind URI was accepted as valid:
	       http://mmisw.org/ont/mmi/badversion/someVocab/someTerm